--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,4 +1,7 @@
 # Changelog for Cyberpunk
 
+1.3.2 - Gun-reliability can now be turned off in the settings
+
+
 1.3.1 - Updated to 1.3, removed all vanilla overwrites
 
