--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for Cyberpunk
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.2 - Gun-reliability can now be turned off in the settings
 
 
